前台主界面优化

--- a/src/css/layout/LeftSider.css
+++ b/src/css/layout/LeftSider.css
@@ -1,6 +1,11 @@
-.leftSider{
+.left-sider-top {
     height:60px;
     background-color: #20a0ff;
     line-height: 60px;
     border-right: solid 1px #e6e6e6;
+}
+
+.left-sider-content{
+    background-color: #E9EEF3;
+    text-align: center;
 }
