--- a/src/css/layout/LeftSider.css
+++ b/src/css/layout/LeftSider.css
@@ -6,6 +6,19 @@
 }
 
 .left-sider-content{
+    background-color: #ecf1f5;
+    text-align: left;
+}
+
+.el-menu{
     background-color: #E9EEF3;
-    text-align: center;
+}
+
+.el-menu-item {
+    background-color: #e2e8f2
+}
+
+.el-menu-vertical-demo:not(.el-menu--collapse) {
+    width: 200px;
+    min-height: 400px;
 }
