登录界面优化以及主页修改

--- a/src/css/layout/BottomNav.css
+++ b/src/css/layout/BottomNav.css
@@ -1,6 +1,6 @@
 .footer{
-    background-color: #716f6e0d;
+    background-color: #FFFFFF;
     color: #333;
     text-align: center;
-    line-height: 60px;
+    line-height: 80px;
   }
