登录加入背景图片以及界面优化

--- a/src/css/layout/MainFrame.css
+++ b/src/css/layout/MainFrame.css
@@ -1,23 +1,18 @@
-.el-header{
+.mainFrame .el-header {
     background-color: #20a0ff;
     color: #333;
     text-align: center;
     line-height: 60px;
   }
-  
-  .el-aside {
+  .mainFrame .el-aside {
     background-color: #E9EEF3;
     color: #333;
     text-align: center;
     
   }
-  
-  .el-main {
+  .mainFrame .el-main {
     background-color: #FFFFFF;
     color: #333;
   }
   
-  body > .el-container {
-    margin-bottom: 40px;
-  }
 
