--- a/src/css/login/Login.css
+++ b/src/css/login/Login.css
@@ -1,35 +1,53 @@
-.el-row {
+.login{
+    background-color: #FFFFFF;
+}
+.login .el-main {
     background: url("../../assets/images/background.jpg") no-repeat;
 }
-.el-col {
-    border-radius: 4px;
+.login-envelope {
+    float: left;
+    margin-top: 3px;
+    margin-left: 83px;
+    line-height: 80px;
+    color: red
+}
+.login-emial {
+    line-height: 80px;
+    float: right;
 }
 .bg-login {
-    margin-top: -80px;
-}
-.grid-content {
+    background-color: #FFFFFF;
     border-radius: 4px;
-    height: 300px;
-    box-shadow: 0 4px 23px 5px rgba(0,0,0,.2), 0 2px 6px rgba(0,0,0,.15);
-    -webkit-box-shadow: 0 4px 23px 5px rgba(0,0,0,.2), 0 2px 6px rgba(0,0,0,.15);
+    height: 280px;
+    box-shadow: 0 4px 23px 5px rgba(0, 0, 0, .2),
+    0 2px 6px rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 0 4px 23px 5px rgba(0, 0, 0, .2),
+    0 2px 6px rgba(0, 0, 0, .15);
+    padding-top: 10px;
+    margin-top:-80px;
 }
-.el-input {
+.login .el-form-item__content {
+    margin-left: 25px;
+}
+.login-top {
+    background-color: #FFFFFF;
+    line-height: 80px;
+    text-align: right;
+}
+.login-bottom {
+    line-height: 80px;
+    text-align: center;
+}
+.login .el-input {
     position: relative;
     font-size: 14px;
     display: inline-block;
     width: 82%; 
 }
-
-.el-button {
+.login .el-button {
     width: 82%;
 }
-.login-top,.login-bottom{
-    height:80px;
-    background-color:#FFFFFF;
-    line-height:80px;
-    text-align:right;
+.login .el-form-item{
+    margin:10px 0;
 }
 
-.el-form-item{
-    margin:8px 0;
-}
