--- a/src/css/layout/MainContent.css
+++ b/src/css/layout/MainContent.css
@@ -1,9 +1,12 @@
-.toolbar {
+.content{
+    overflow-y: auto
+}
+.content .toolbar {
     background: #f2f2f2;
     margin: 10px 0;
     padding: 10px;
 }
 
-.el-form-item {
+.content .el-form-item {
     margin-bottom: 0;
 }
