--- a/src/css/login/Login.css
+++ b/src/css/login/Login.css
@@ -1,5 +1,5 @@
 .login{
-    min-width: 1150px;
+    min-width: 600px;
     /*min-height: 600px;*/
     background-color: #fff;
     position: fixed;
@@ -10,6 +10,7 @@
 }
 .login .el-main {
     background: url("../../assets/images/background.jpg") no-repeat;
+    min-height: 666px;
 }
 .login-envelope {
     float: left;
@@ -32,7 +33,8 @@
     0 2px 6px rgba(0, 0, 0, .15);
     padding-top: 10px;
     margin-top:-80px;
-    min-width: 338px;;
+    min-width: 338px;
+    min-height: 290px;
 }
 .login .el-form-item__content {
     margin-left: 25px;
