--- a/static/css/overwrite.css
+++ b/static/css/overwrite.css
@@ -420,21 +420,31 @@ table {
     background-color: #eef1f6;
 }
 
-.el-menu-item {
-    background-color: #e2e8f2
+.el-submenu .el-menu-item {
+    border-left:2px solid #e6e7ea;
+    padding-left: 56px !important; 
 }
 
 .el-menu-vertical-demo:not(.el-menu--collapse) {
-    width: 230px;
+    width: 180px;
     min-height: 400px;
 }
 
 .el-submenu .el-menu-item:hover,
+.el-menu-item:hover,
 .el-submenu__title:hover {
-    background-color: #d1dbe5;
+    background-color: #e6e7ea;
 }
 
 .el-dropdown-menu {
     padding: 0;
 }
 
+.el-menu-item.is-active {
+    color: #333;
+    background-color: #FFFFFF;
+    border-left:2px solid #20a0ff;
+}
+.el-menu-item.is-active:hover{
+    background-color: #FFF;
+}
